# eeet2582-backend

./: .gitignore  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
eeet2582_backend/: .env  .env.example  apps.py  asgi.py  celery.py  manage.py  models.py  settings.py  urls.py  wsgi.py
eeet2582_backend/api/: google_login.py  parse_docx.py
eeet2582_backend/authentication/: authentication.py
eeet2582_backend/migrations/: 0001_initial.py  0002_documentparagraph.py  0002_documenttable_tablerow_rowcell.py  0002_remove_user_last_login_alter_user_password.py  0002_remove_userprofile_user.py  0003_documentimage.py  0003_heading.py  0003_subheading.py  0003_user_last_login.py  0003_userprofile_provider.py  0004_caption.py  0004_endnote.py  0004_userdocument_user.py  0004_userprofile_is_active.py  0005_delete_userprofile.py  0005_documentparagraphresult.py  0005_listparagraph.py  0006_documenttable.py  0006_initial.py  0007_tablerow.py  0008_rowcell.py
eeet2582_backend/services/: parse_docx.py  process_docx.py  return_docx.py  upload_to_s3.py
output_docx/: RMIT University.docx  The Battle Ground Of Information System Development in Developing Countries From Mutual Exclusion To Hybrid Vigor.docx  This is the model title of an Acta article.docx  ~$e Battle Ground Of Information System Development in Developing Countries From Mutual Exclusion To Hybrid Vigor.docx
uploads/: Assignment_2-_Smartwatch.docx  Sample_article_for_Acta_Horticulturae.docx  ffd58288b505417089a67453244a78bd_sample.docx  sample.docx  ~$sample.docx
(+22 files in other folders)
