[tool.poetry]
name = "eeet2582-backend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Quynh Le"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.0.0"
django-allauth = "0.51.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
